Make install for macOS, icons folder, icns files, updates in INSTALL, README and LISEZMOI"

--- a/etc/START.htm
+++ b/etc/START.htm
@@ -85,6 +85,9 @@
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Bedienungsanleitung</a></li>
       </ul>
+      <ul class="doc">
+        <li><a href="README.txt" target="_blank">README.txt</a></li>
+      </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">Lizenz</a> /
       </div>
@@ -98,6 +101,9 @@
       </ul>
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">User Guide</a></li>
+      </ul>
+      <ul class="doc">
+        <li><a href="README.txt" target="_blank">README.txt</a></li>
       </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">License</a> /
@@ -113,6 +119,9 @@
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Modo de empleo</a></li>
       </ul>
+      <ul class="doc">
+        <li><a href="README.txt" target="_blank">README.txt</a></li>
+      </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">Licencia</a> /
       </div>
@@ -126,6 +135,9 @@
       </ul>
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Mode d'emploi</a></li>
+      </ul>
+      <ul class="doc">
+        <li><a href="LISEZMOI.txt" target="_blank">LISEZMOI.txt</a></li>
       </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">Licence</a> /
@@ -141,6 +153,9 @@
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">Istruzioni per l'uso</a></li>
       </ul>
+      <ul class="doc">
+        <li><a href="README.txt" target="_blank">README.txt</a></li>
+      </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">Licenza</a> /
       </div>
@@ -154,6 +169,9 @@
       </ul>
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">User Guide</a></li>
+      </ul>
+      <ul class="doc">
+        <li><a href="README.txt" target="_blank">README.txt</a></li>
       </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">License</a> /
@@ -169,6 +187,9 @@
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">User Guide</a></li>
       </ul>
+      <ul class="doc">
+        <li><a href="README.txt" target="_blank">README.txt</a></li>
+      </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">License</a> /
       </div>
@@ -183,6 +204,9 @@
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">User Guide</a></li>
       </ul>
+      <ul class="doc">
+        <li><a href="README.txt" target="_blank">README.txt</a></li>
+      </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">License</a> /
       </div>
@@ -196,6 +220,9 @@
       </ul>
       <ul class="doc">
         <li><a href="http://geneweb.tuxfamily.org/wiki/GeneWeb" target="_blank">User Guide</a></li>
+      </ul>
+      <ul class="doc">
+        <li><a href="README.txt" target="_blank">README.txt</a></li>
       </ul>
       <div class="bottom">
         <a href="https://github.com/geneweb/geneweb/blob/master/LICENSE" target="_blank">License</a> /
